--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ add_definitions(${OpenCV_DEFINITIONS})
 
 add_executable(depth_to_bgr examples/depth_to_bgr.cpp)
 target_link_libraries(depth_to_bgr ${OpenCV_LIBRARIES})
+
+add_executable(centerize examples/centerize.cpp)
+target_link_libraries(centerize ${OpenCV_LIBRARIES})
