--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,6 @@ target_link_libraries(depth_to_bgr ${OpenCV_LIBRARIES})
 
 add_executable(centerize examples/centerize.cpp)
 target_link_libraries(centerize ${OpenCV_LIBRARIES})
+
+add_executable(tile examples/tile.cpp)
+target_link_libraries(tile ${OpenCV_LIBRARIES})
